# component-llm-openai

./: .gitignore  .secrets.sample  Cargo.toml  README.md  build.rs  component.manifest.json
.codex/: repo_overview.md
.github/workflows/: ci.yml  dev-publish.yml  nightly-e2e.yml  release.yml
artifacts/live-gtests/: scenario.meta.json
artifacts/live-gtests-check/: scenario.meta.json
artifacts/live-gtests-check/artifacts/: step-001.meta.json
artifacts/live-gtests/artifacts/: run_live_provider.sh  step-001.meta.json
artifacts/negative-gtests/01_missing_api_key_required/: scenario.meta.json
artifacts/negative-gtests/02_custom_requires_base_url/: scenario.meta.json
artifacts/readme-gtests-direct/: scenario.meta.json
artifacts/readme-gtests-direct/artifacts/: launcher.answers.json  main.ygtc  step-001.meta.json  step-002.meta.json  step-003.meta.json  step-004.meta.json  step-005.meta.json  step-006.meta.json  step-007.meta.json  step-008.meta.json  step-009.meta.json  step-010.meta.json  step-011.meta.json  step-012.meta.json  step-013.meta.json  step-014.meta.json  step-015.meta.json
artifacts/readme-gtests-new/: scenario.meta.json
artifacts/readme-gtests-new/artifacts/: default.answers.json  main.ygtc  setup.answers.json  step-001.meta.json  step-002.meta.json  step-003.meta.json  step-004.meta.json  step-005.meta.json  step-006.meta.json  step-007.meta.json  step-008.meta.json  step-009.meta.json  step-010.meta.json  step-011.meta.json  step-012.meta.json  step-013.meta.json  step-014.meta.json  step-015.meta.json
artifacts/readme-gtests-one/: scenario.meta.json
artifacts/readme-gtests-one/artifacts/: build_component.json  build_test.answers.json  step-001.meta.json  step-002.meta.json
artifacts/readme-gtests-stable/01_build_component/: scenario.meta.json
artifacts/readme-gtests-stable/02_self_describing_surface/: scenario.meta.json
artifacts/readme-gtests-stable/03_runtime_resolution/: scenario.meta.json
artifacts/readme-gtests-stable/04_qa_and_i18n_assets/: scenario.meta.json
artifacts/readme-gtests-stable/05_wizard_pack_default_and_personalized/: scenario.meta.json
artifacts/readme-gtests/01_build_component/: scenario.meta.json
artifacts/readme-gtests/02_self_describing_surface/: scenario.meta.json
artifacts/readme-gtests/03_runtime_resolution/: scenario.meta.json
artifacts/readme-gtests/04_qa_and_i18n_assets/: scenario.meta.json
assets/i18n/: en.json
ci/: local_check.sh
flows/: custom.ygtc  default.ygtc
schemas/: component.schema.json
schemas/io/: input.schema.json  output.schema.json
src/: i18n.rs  i18n_bundle.rs  lib.rs  qa.rs
tests/: conformance.rs  live_provider.rs
tools/: i18n.sh
(+86 files in other folders)
