[package]
name = "component-llm-openai"
version = "0.1.4"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component component-llm-openai"
repository = "https://github.com/greenticai/component-llm-openai"
authors = ["maarten"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greentic-types = { version = "0.4" }
ciborium = "0.2"

[dev-dependencies]
reqwest = { version = "0.11.19", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"

[build-dependencies]
greentic-types = { version = "0.4" }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { version = "0.4", default-features = false, features = [
    "component-v0-6",
    "http-client",
    "secrets",
] }
wit-bindgen = "0.54"
