[package]
name = "component-llm-openai"
version = "0.2.0-dev.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"
description = "Greentic component component-llm-openai"
repository = "https://github.com/greenticai/component-llm-openai"
authors = [
    "maarten",
]
build = "build.rs"

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[dependencies]
serde_json = "1"
ciborium = "0.2"

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"

[dev-dependencies]
serde_json = "1"

[dev-dependencies.reqwest]
version = "0.13"
features = [
    "blocking",
    "json",
    "rustls",
]

[build-dependencies]
serde_json = "1"

[build-dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"

[target."cfg(target_arch = \"wasm32\")".dependencies]
wit-bindgen = "0.57"

[target."cfg(target_arch = \"wasm32\")".dependencies.greentic-interfaces-guest]
version = ">=1.1.0-dev, <1.2.0-0"
default-features = false
features = [
    "component-v0-6",
    "http-client",
    "secrets",
]
